--- a/index.html
+++ b/index.html
@@ -1,53 +1,36 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Bedankt</title>
+  <title>I love you ❤️</title>
   <style>
     body {
-      background-color: #f5f5f5;
-      color: #333;
-      font-family: monospace;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-    }
-
-    pre {
-      font-size: 18px;
+      background-color: #fff0f5;
+      color: #d6336c;
+      font-family: "Courier New", monospace;
       white-space: pre;
       text-align: center;
-      margin-bottom: 30px;
-    }
-
-    .grow-text {
-      opacity: 0;
-      transform: scale(0.5);
-      animation: grow 2s ease-in-out forwards;
-    }
-
-    @keyframes grow {
-      to {
-        opacity: 1;
-        transform: scale(1);
-      }
+      padding: 50px;
     }
   </style>
 </head>
 <body>
-  <pre>
-     _____   _        _____  ____  _   _  __     __
-    |_   _| | |      | ____||  _ \| | | | \ \   / /
-      | |   | |      |  _|  | |_) | | | |  \ \ / / 
-      | |   | |___   | |___ |  _ <| |_| |   \ V /  
-      |_|   |_____|  |_____||_| \_\\___/     \_/   
-
-                      I love you
-  </pre>
-
-  <div class="grow-text">Dank je wel voor alles wat je voor me hebt gedaan 💛</div>
+<pre>
+  ******       ******
+**********   **********
+************* *************
+***************************
+ *************************
+  ***********************
+   *********************
+     *****************
+       *************
+         *********
+           *****
+            ***
+             *
+          I love you
+</pre>
 </body>
 </html>
+
