--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
       text-align: center;
       padding: 50px;
     }
+    img {
+      max-width: 80%;
+      height: auto;
+      margin-top: 30px;
+    }
   </style>
 </head>
 <body>
@@ -31,6 +36,8 @@
              *
           I love you
 </pre>
+
+<!-- 🖼️ Add the image here -->
+<img src="cute-pic.jpg" alt="A cute picture" />
 </body>
 </html>
-
