--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
 </pre>
 
 <!-- 🖼️ Add the image here -->
-<img src="cute-pic.jpg" alt="A cute picture" />
+<img src="spiritual_friendship.jpg" alt="Visualisation of our relation" />
 </body>
 </html>
